[package]
name = "gb-dynarec"
version = "0.1.0"
authors = ["Andrew Imm <aimm22@gmail.com>"]
edition = "2018"

[features]
dump_disassembly = []
graphics = ["winit"]
audio = []

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = "0.13.0"

[target.'cfg(windows)'.build-dependencies]
windows = "0.13.0"

[dependencies]
winit = {version = "0.25.0", optional = true}
