[package]
name = "gb-dynarec"
version = "0.1.0"
authors = ["Andrew Imm <aimm22@gmail.com>"]
edition = "2018"

[features]
dump_disassembly = []
graphics = ["winit"]
audio = []
interp = []

[target.'cfg(unix)'.dependencies]
libc = "0.2"
raw-window-handle = "0.5.0"
x11-dl = "2.20.0"

[target.'cfg(windows)'.dependencies]
windows = "0.13.0"

[target.'cfg(windows)'.build-dependencies]
windows = "0.13.0"

[dependencies]
winit = {version = "0.27.2", optional = true}
